# give-pilates

./: README.md  app.py  package.json  pyproject.toml  requirements.txt  server.js
give-pilates/: README.md
give-pilates/backend/: .gitignore  package-lock.json  package.json
give-pilates/backend/src/: server.ts
give-pilates/frontend/: package-lock.json  package.json
give-pilates/frontend/src/: App.tsx  index.css
give-pilates/frontend/src/components/: About.tsx  Contact.tsx  Gallery.tsx  Header.tsx  Hero.tsx  Schedule.tsx  Testimonials.tsx
static/css/: style.css
static/js/: script.js
templates/: index.html
