[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.0.3"
Werkzeug = "2.0.3"
click = "8.0.4"
itsdangerous = "2.0.1"
Jinja2 = "3.0.3"
MarkupSafe = "2.0.1"
python-dotenv = "0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
